[Fix] workspace smoothly covering navigation panel effect

--- a/src/workbench/parts/navigationPanel/navigationPanel.scss
+++ b/src/workbench/parts/navigationPanel/navigationPanel.scss
@@ -1,10 +1,2 @@
 
-#navigation-panel {
-    position: relative;
-    width: auto;
-    height: auto;
-
-    // collapse/expand purpose
-
-    flex-grow: 0; // prevent occupy extra spaces from the editor
-}
+// noop
