--- a/src/workbench/parts/workspace/workspace.scss
+++ b/src/workbench/parts/workspace/workspace.scss
@@ -1,12 +1,3 @@
 #workspace {
-    position: relative;
-    width: auto;
-    height: auto;
-    
-    display: flex;
-    flex-direction: column;
-    
-    // collapse/expand purpose
-
-    flex-grow: 1;
+    background-color: white;
 }
